--- a/index.html
+++ b/index.html
@@ -43,10 +43,9 @@
     ">×</div>
 
    Chào bạn Thư , đây là món quà tớ muốn làm dành tặng cho cậu . Và tớ dạo gần đây tớ có ít chuyện rối lòng .
-   Đó là không biết cậu còn thích tớ hay không.Nhiều lúc tớ cảm thấy mình đang làm phiền cậu, Khoảng đầu thời gian đầu tháng 7 này khi tớ không nhắn cậu thì cậu cũng không nhắn , 
-   thì tớ nghĩ là không biết là cậu còn thích tớ hay không . Nhưng đến hôm qua cậu nhắn và chúng mình có tâm sự đôi chút thì tối qua tớ có suy nghĩ đôi chút.
-   Và cũng nói thật thì hiện tại tớ đang nhắn với 1 bạn. Mồm tớ cứ bảo thích bạn này nhưng tớ không biết cảm xúc tớ dành cho cậu và bạn kia như thế nào.
-   Nghe tồi cậu nhẻ .Thực sự ngày hôm qua tớ đưa ra quyết định quá vội vàng . Nói xong những điều này ,cậu còn tình cảm với tớ thì có thể cho tớ thêm thời gian suy nghĩ về việc này được không.
+   Đó là không biết cậu còn thích tớ hay không.Nhiều lúc tớ cảm thấy mình đang làm phiền cậu. Tớ cảm thấy sự chủ động từ 1 phía như là đang làm phiền vậy nên cảm xúc tớ nhạt dần,
+   Nhưng đến hôm qua cậu nhắn và chúng mình có tâm sự thì tối qua tớ bối rối đôi chút , liệu tớ vẫn còn thích cậu không , vì tớ cảm thấy lòng như cái gì đó nó đề nặng vậy . Tớ thấy mình đưa ra quyết định khá là vội vàng , tớ thấy ình cần thêm thười gian để suy nghĩ
+   Nói xong những điều này ,cậu còn tình cảm với tớ thì có thể cho tớ thêm thời gian suy nghĩ về việc này được không. Nếu không còn thì nói với tớ , không sao cả
    Tớ nợ cậu 1 cái thanh xuân học trò này.
 
 
