--- a/index.html
+++ b/index.html
@@ -44,7 +44,8 @@
 
    Chào bạn Thư , đây là món quà tớ muốn làm dành tặng cho cậu . Và tớ dạo gần đây tớ có ít chuyện rối lòng .
    Đó là không biết cậu còn thích tớ hay không.Nhiều lúc tớ cảm thấy mình đang làm phiền cậu nên cảm xúc tớ nhạt dần,
-   Nhưng đến hôm qua cậu nhắn và chúng mình có tâm sự thì tối qua tớ bối rối đôi chút , liệu tớ vẫn còn thích cậu không , vì tớ cảm thấy lòng như cái gì đó nó đề nặng vậy . Tớ thấy mình đưa ra quyết định khá là vội vàng , tớ thấy ình cần thêm thời gian để suy nghĩ
+   Nhưng đến hôm qua cậu nhắn và chúng mình có tâm sự thì tối qua tớ bối rối đôi chút , liệu tớ vẫn còn thích cậu không , vì tớ cảm thấy lòng như cái gì đó nó đề nặng vậy . 
+   Tớ thấy mình đưa ra quyết định khá là vội vàng , tớ thấy ình cần thêm thời gian để suy nghĩ
    Nói xong những điều này ,cậu còn tình cảm với tớ thì có thể cho tớ thêm thời gian suy nghĩ về việc này được không. Nếu không còn thì nói với tớ , không sao cả
    Tớ nợ cậu 1 cái thanh xuân học trò này.
 
